populate about text

--- a/src/app/home/about/about.component.html
+++ b/src/app/home/about/about.component.html
@@ -30,7 +30,8 @@
                                         dolorum explicabo
                                         iure ipsam?
                                 </p> -->
-                                <div [innerHTML]="about.template"
+                                <div
+                                        [innerHTML]="about.template"
                                         [class]="about.class"
                                         [style]="about.style"></div>
                         </div>
