--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,114 +1,89 @@
-/* dark brain */
-/* https://firebasestorage.googleapis.com/v0/b/portfolio-website-v2-2023.appspot.com/o/hero%2F49203125457_a0184cae7a_o.png?alt=media&token=c65577f8-6956-436c-acb6-df3bc02f714f */
-/* data analysis digital marketing */
-/* https://firebasestorage.googleapis.com/v0/b/portfolio-website-v2-2023.appspot.com/o/hero%2Fdigital-marketing-g200b3fcf4_1280.jpg?alt=media&token=aea5ae74-17db-43eb-b4d0-a427f308f790 */
-/* vscoding */
-/* https://firebasestorage.googleapis.com/v0/b/portfolio-website-v2-2023.appspot.com/o/hero%2Fprogramming-g96a78dfbf_1280.png?alt=media&token=abc8a758-1294-44d5-b04b-e42204500eb5 */
-
-.page{
-    display:grid;
-    grid-template-columns: 1fr;
-    min-width: 250px;
-    position: relative;
+.page {
+  display: grid;
+  grid-template-columns: 1fr;
+  min-width: 250px;
+  position: relative;
 }
 
-header{
-/* background: url('https://firebasestorage.googleapis.com/v0/b/portfolio-website-v2-2023.appspot.com/o/hero%2Fdigital-marketing-g200b3fcf4_1280.jpg?alt=media&token=aea5ae74-17db-43eb-b4d0-a427f308f790')  no-repeat 20% 30% / cover; */
-/* background: url('https://firebasestorage.googleapis.com/v0/b/portfolio-website-v2-2023.appspot.com/o/hero%2Fdigital-marketing-g200b3fcf4_1280.jpg?alt=media&token=aea5ae74-17db-43eb-b4d0-a427f308f790')  no-repeat center center/ cover; */
-position: relative;
+header {
+  position: relative;
 
-background: linear-gradient(90deg,#1e273e 0%,#0f172a 100%);
-height: 100vh;
-display: grid;
-z-index: 3;
-}
-header::before {
-    /* content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.6);
-    z-index: 1; */
+  background: linear-gradient(90deg, #1e273e 0%, #0f172a 100%);
+  height: 100vh;
+  display: grid;
+  z-index: 3;
 }
 
-
-header>app-navbar{
-    /* align-self: end; */
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 3;
+header > app-navbar {
+  /* align-self: end; */
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 3;
 }
-header>app-hero{
-    align-self: flex-end;
-    position: relative;
-    z-index: 2;
+header > app-hero {
+  align-self: flex-end;
+  position: relative;
+  z-index: 2;
 }
-main{
-    display: grid;
-}
-
-.home-container{
-    display: grid;
-    grid-template-columns: fit-content(1rem) 1fr;
-    z-index: 2;
+main {
+  display: grid;
 }
 
-/* .yellow-bar, #about{
-    grid-row: 1/2;
-    grid-column: 1/1;
-} */
+.home-container {
+  display: grid;
+  grid-template-columns: fit-content(1rem) 1fr;
+  z-index: 2;
+}
 
 .yellow-bar .section {
-    cursor: pointer;
+  cursor: pointer;
 }
-.yellow-bar{
-    /* positioning */
-    z-index: 5;
-    position: fixed;
-     /* top: 0; */
-    top: 50%;
-    transform: translateY(-50%);
+.yellow-bar {
+  /* positioning */
+  z-index: 5;
+  position: fixed;
+  /* top: 0; */
+  top: 50%;
+  transform: translateY(-50%);
 
-    /* From https://css.glass */
-/* background: rgba(255, 255, 255, 0); */
-border-radius: 16px;
-box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-backdrop-filter: blur(0px);
--webkit-backdrop-filter: blur(0px);
-border: 1px solid rgba(255, 255, 255, 0.45);
-/* From https://css.glass */
-    width: 1rem;
-    height: 50vh;
+  /* From https://css.glass */
+  /* background: rgba(255, 255, 255, 0); */
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(0px);
+  -webkit-backdrop-filter: blur(0px);
+  border: 1px solid rgba(255, 255, 255, 0.45);
+  /* From https://css.glass */
+  width: 1rem;
+  height: 50vh;
 
-    display: grid;
-    /* align-content: space-between; */
-}
-
-.yellow-bar div{
-    background: var(--main-colour);
-    display: grid;
-    place-items: center;
+  display: grid;
+  /* align-content: space-between; */
 }
 
-.yellow-bar:first-child, .yellow-bar:last-child{
-    overflow: hidden;
+.yellow-bar div {
+  background: var(--main-colour);
+  display: grid;
+  place-items: center;
 }
 
-.page-sections{
-    display: grid;
-    grid-template-columns: 1fr;
+.yellow-bar:first-child,
+.yellow-bar:last-child {
+  overflow: hidden;
 }
 
-section{
-    min-height: 100vh;
+.page-sections {
+  display: grid;
+  grid-template-columns: 1fr;
 }
 
+section {
+  min-height: 100vh;
+}
 
 .yellow-bar:hover {
-    opacity: 1;
-    transition: all 0.25s;
+  opacity: 1;
+  transition: all 0.25s;
 }
