--- a/src/app/home/about/about.component.html
+++ b/src/app/home/about/about.component.html
@@ -30,10 +30,10 @@
                                         dolorum explicabo
                                         iure ipsam?
                                 </p> -->
-                                <div
+                                <!-- [style]="about.style" -->
+                                <div class="about-div"
                                         [innerHTML]="about.template"
-                                        [class]="about.class"
-                                        [style]="about.style"></div>
+                                        [class]="about.class"></div>
                         </div>
 
                 </main>
