--- a/src/app/home/hero/hero.component.html
+++ b/src/app/home/hero/hero.component.html
@@ -26,9 +26,11 @@
                         </a>
                     </div>
                     <div class="hero-buttons">
-                        <a href="https://github.com/El-Nico"><img
+                        <a
+                            href="https://www.linkedin.com/in/nicholas-chibuike-eruba"
+                            target="_blank"><img
                                 src="assets/linkedin.svg" /></a>
-                        <a href="https://github.com/El-Nico"><img
+                        <a href="https://github.com/El-Nico" target="_blank"><img
                                 src="assets/github.svg" /></a>
                         <a class="projects" [routerLink]="['/home']"
                             fragment="projects-experience">My Projects</a>
