--- a/src/app/home/articles/articles.component.css
+++ b/src/app/home/articles/articles.component.css
@@ -1,21 +1,18 @@
- /* import general settings */
- @import "general-settings.css";
+/* import general settings */
+@import "general-settings.css";
 
-.page{
-    /* height: 100vh; */
-    padding-inline: 2rem;
-    padding: 2rem 10px 4rem 10px;
-    display: grid;
-
-    /* font-family: 'Lato', sans-serif;
-    line-height: 1.5; */
+.page {
+  /* height: 100vh; */
+  padding-inline: 2rem;
+  padding: 2rem 10px 4rem 10px;
+  display: grid;
 }
 
-header{
+header {
   padding-bottom: 2rem;
   padding-top: 1rem;
 }
-header>h1::after{
+header > h1::after {
   content: "";
   height: 2px;
   width: 3rem;
@@ -24,100 +21,130 @@ header>h1::after{
   margin: 0 auto 1rem auto;
 }
 
-main{
+main {
   position: relative;
   /* overflow: hidden; */
 }
 
-  /*  Article list */
-  .page .article-grid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 1rem;
-    grid-auto-rows: min-content;
-  }
-
-
-
-  .article-grid .span-1{
-    display: grid;
-    grid-auto-flow: row;
-    grid-template-rows: 1fr 1fr; 
-  }
-  
-  
-  .article-grid .span-2:first-child,
-  .article-grid .span-2:last-child 
-  {
-    display: grid;
-    /* grid-template-rows: 1fr; */
-    grid-auto-flow: column;
-    grid-template-columns: repeat(auto-fit, minmax(100px,1fr));
-    grid-gap: 1rem;
-    align-items: center;
-    grid-column: 1 / span 2;
-    grid-auto-rows: min-content;
-
-/* max-height: 250px;; */
-  }
-  
-  .page .article-grid > *:last-child {
-    grid-column: 2 / span 2;
-  }
-  
-  #article .meta {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background: #eee;
-    padding: 0.5rem;
-  }
-
-
-.yellow-bar>*{
-    background: var(--main-colour);
-    height: 4rem;
+/*  Article list */
+.page .article-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 1rem;
+  grid-auto-rows: min-content;
 }
 
-.yellow-bar:first-child, .yellow-bar:last-child{
-    overflow: hidden;
+.article-grid .span-1 {
+  display: grid;
+  grid-auto-flow: row;
+  grid-template-rows: 1fr 1fr;
 }
 
+.article-grid .span-2:first-child,
+.article-grid .span-2:last-child {
+  display: grid;
+  /* grid-template-rows: 1fr; */
+  grid-auto-flow: column;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  grid-gap: 1rem;
+  align-items: center;
+  grid-column: 1 / span 2;
+  grid-auto-rows: min-content;
 
-.page{
-  position: relative
+  /* max-height: 250px;; */
 }
 
-.page app-custom-scrollbar{
+.page .article-grid > *:last-child {
+  grid-column: 2 / span 2;
+}
+
+#article .meta {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #eee;
+  padding: 0.5rem;
+}
+
+.yellow-bar > * {
+  background: var(--main-colour);
+  height: 4rem;
+}
+
+.yellow-bar:first-child,
+.yellow-bar:last-child {
+  overflow: hidden;
+}
+
+.page {
+  position: relative;
+}
+
+.page app-custom-scrollbar {
   position: absolute;
   right: 1rem;
   top: 50%;
   transform: translateY(-50%);
 }
 
-.article-grid{
-height: 100%;
-  overflow-y: scroll;
+.article-grid {
+  height: 100%;
+  overflow-y: hidden;
   overflow-x: hidden;
 }
 
+main {
+  position: relative;
+}
+
+.custom-scrollbar-v {
+  position: absolute;
+  width: 1rem;
+  height: 100%;
+  /* border: 1px green solid; */
+  left: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+}
+
+.custom-scrollbar-v fa-icon:nth-child(1) {
+  /* position: absolute; */
+  /* color: red; */
+  padding-top: 10vh;
+}
+
+.custom-scrollbar-v fa-icon:nth-child(2) {
+  /* position: absolute;
+  bottom: 0; */
+  padding-bottom: 10vh;
+}
+
+.custom-scrollbar-v fa-icon:nth-child(1):active {
+  transform: translateY(-3px);
+}
+
+.custom-scrollbar-v fa-icon:nth-child(2):active {
+  transform: translateY(3px);
+}
 
 @media screen and (max-width: 768px) {
   .page .article-grid {
-  grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .page .article-grid > *:first-child,
+  .page .article-grid > *:last-child {
+    grid-template-columns: 1fr;
+    grid-column: 1;
+  }
 }
 
-.page .article-grid > *:first-child,
-.page .article-grid > *:last-child {
-  grid-template-columns: 1fr;
-  grid-column: 1;
-}
-}
-
-
-@media(max-width: 600px) {
+@media (max-width: 600px) {
   /* Stack Grid Items */
-  .page .article-grid{
+  .page .article-grid {
     grid-template-columns: 1fr;
   }
 }
