--- a/src/app/home/projects-experience/proj-exp-item/proj-exp-item.component.css
+++ b/src/app/home/projects-experience/proj-exp-item/proj-exp-item.component.css
@@ -1,5 +1,6 @@
 .desc-container {
-  padding: 0px 10px 10px 10px;
+  /* padding: 0px 10px 10px 10px; */
+  display: grid;
 }
 
 .item-container {
@@ -11,17 +12,31 @@
   text-decoration: underline;
 }
 
-.image-star-rating{
-
-  > img {
-    height: 30vh;
+.image-star-rating {
+  /* > img {
+    height: auto;
     object-fit: cover;
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
-  }
+  } */
 }
 
+.project-card {
+  display: grid;
+  grid-auto-flow: row;
+  grid-template-rows: 80% 20%;
+}
 
-/* .project-card {
-  height: 60vh;
-} */
+.category p {
+  text-transform: uppercase;
+}
+
+.category-angular {
+  background: var(--angular-color);
+}
+.category-react {
+  background: var(--react-color);
+}
+.category-data-ai {
+  background: var(--data-ai-color);
+}
