--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -19,7 +19,8 @@
                         {{article.author}},
                         &nbsp;{{article.date}}
                     </small>
-                    <div class="category category-data-ai">{{article.category}}</div>
+                    <div
+                        class="category category-data-ai">{{article.category}}</div>
                 </div>
                 <!-- <div class="iframe" [style.height]="height.value"> -->
                 <!-- <div *ngIf="obtainedFirstHeight; else catch"> -->
