--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -16,7 +16,7 @@
             <div class="copyright">
 
                 <p>Copyright &copy; 2023
-                    <a href="https://nicholas-eruba.com" target="_blank">Nicholas
+                    <a href="https://nicholas-eruba.com/home">Nicholas
                         Chibuike-Eruba</a>
                     All Rights Reserved</p>
 
